Learn about Executor and Mutlithreading Concept and how thread and lock works